<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_title_home" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_download"
            android:title="@string/nav_title_download" />
        <item
            android:id="@+id/nav_maintenance"
            android:icon="@drawable/ic_maintenance"
            android:title="@string/nav_title_maintenance" />
        <item
            android:id="@+id/nav_unit_taking"
            android:icon="@drawable/ic_unit_take"
            android:title="@string/nav_title_unit_taking" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_upload"
            android:title="@string/nav_title_upload" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location"
            android:title="@string/nav_title_location" />
        <item
            android:id="@+id/nav_uploaded"
            android:icon="@drawable/ic_uploaded_list"
            android:title="@string/nav_title_uploaded" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/nav_title_exit" />
    </group>
</menu>