<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.DownloadAssetFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1.8">

        <android.support.v7.widget.CardView
            android:id="@+id/card_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_4"
            card_view:cardBackgroundColor="@color/colorWhite"
            card_view:cardCornerRadius="@dimen/dp_4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/fromDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_calendar"
                        android:editable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/fromDate"
                        android:inputType="date"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textSize="15sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/toDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_calendar"
                        android:editable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/toDate"
                        android:inputType="date"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/card_date"
            android:layout_margin="@dimen/dp_8"
            card_view:cardBackgroundColor="@color/colorWhite"
            card_view:cardCornerRadius="@dimen/dp_4"
            card_view:contentPadding="@dimen/dp_8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dp_8"
                android:paddingTop="@dimen/dp_8"
                android:paddingEnd="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_4">

                <TextView
                    style="@style/ColorViewText"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="Selected Location List"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_choose_location"
                    style="@style/GreenButton"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="@dimen/dp_32"
                    android:layout_weight="0.5"
                    android:text="@string/btn_choose"
                    android:textAllCaps="false"
                    android:textSize="@dimen/sp_10" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/dp_48"
                android:background="@color/colorPrimary" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/selected_locationList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_48"
                android:overScrollMode="never"
                tools:listitem="@layout/select_location_item" />
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="0.2"
        android:gravity="center">

        <Button
            android:id="@+id/btn_download"
            style="@style/GreenButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_36"
            android:text="@string/btn_download"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_download_back"
            style="@style/GreenButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_36"
            android:text="@string/btn_back"
            android:textAllCaps="false"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>